package model.enums;

public enum IngredientType {
    SALT,
    ROOTS,
    LEAVES,
    FLY_AGARIC,
    BARK,
    BLOOD
}

