package model.enums;

public enum RitualPhase {
    PREP,
    CHANT,
    OFFERING,
    DIVINATION,
    REVEAL,
    SACRIFICE,
    FINISH
}

