package model.records;

public record Drink(String name, int potency) {
}

